# pomfit

./: .gitignore  AUTHORS  ChangeLog  LICENSE  LICENSE.txt  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  pomfit.desktop  pomfit.xpm
data/win32/: pomfit.exe.manifest  resource.rc
src/: Main.c  Main.c~  Main_Linux.c  Main_Win.cpp  Makefile.am  Makefile.in  database.c  database.h  header.h  keybinds.c  keybinds.h  log.c  log.h  manager.c  manager.h  other.c  other.h  pomfit.c  pomfit.h  pomfit.nim  profiles.c  profiles.h  projUtils.nim  queue.c  queue.h  resource.h  screenshot.cpp  screenshot.h  settings.c  settings.h  structs.h  uploader.c  uploader.h
src/private/: database.nim  fileChooser.nim  gui.nim  gui_gtk.nim  keybinds.nim  keybinds_cb.nim  profiles.nim  projTypes.nim  projUtils.nim  queue.nim  settings.nim  uploader.nim
src/private/lib/: gtk2ext.nim
